# diet-generation

./: README.md  pyproject.toml
src/diet_generation/cli/: __init__.py  diet_cmd.py
src/diet_generation/config/: settings.py
src/diet_generation/diet/: food_database.py  meals_plan.py  meals_plan_llm.py  types.py
src/diet_generation/pipelines/: diet_pipeline.py
src/diet_generation/user/: types.py  user.py
src/diet_generation/utils/: io.py
src/project_fitness_adri/cli/: __init__.py  diet_cmd.py  exercises_cmd.py
src/project_fitness_adri/config/: settings.py
src/project_fitness_adri/data/databases/: food.csv
src/project_fitness_adri/diet/: food_database.py  meals_plan.py  meals_plan_llm.py  types.py  vectorize.py
src/project_fitness_adri/pipelines/: diet_pipeline.py
src/project_fitness_adri/user/: user.py
src/project_fitness_adri/utils/: io.py
